# SKYMIRROR

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security-scan.yml
data/rag/: README.md
data/rag/road-conditions/: datamall_api_user_guide.md  datamall_gis_user_guide.md  onemap_api_workshop_demo_2025.md  onemap_basemap_docs.md  onemap_home.md  sdre_revision_i_mar_2026.md  tr68_part4_data_formats.md  traffic_control_at_work_zone_july_2019.md
data/rag/safety-incidents/: av_application_form_public_roads_2025.md  av_assessment_framework.md  tr68_part2_safety.md
data/rag/traffic-regulations/: as01_public_access_note.md  lta_annual_report_2024_2025.md  smart_mobility_2030.md  tr68_part1_basic_behaviour.md  tr68_part3_cybersecurity.md
data/sources/: traffic_camera_reference.json
data/uploads/traffic-regulations/: road_traffic_act_1961.md
docs/: SKYMIRROR_PROJECT_LOGIC.md
docs/superpowers/plans/: 2026-04-14-alert-generation-agent.md  2026-04-15-lta-datamall-integration.md
docs/superpowers/specs/: 2026-04-14-alert-generation-agent-design.md  2026-04-15-lta-datamall-integration-design.md
governance/: AI_SECURITY_RISK_REGISTER.md  policy.yaml  release_thresholds.yaml
scripts/: evaluate_alerts.py  evaluate_runtime.py
src/skymirror/: __init__.py  main.py
src/skymirror/agents/: __init__.py  alert_manager.py  experts.py  orchestrator.py  prompts.py  report_generator.py  report_helpers.py  report_templates.py  scene_schema.py  validator.py  vlm_agent.py
src/skymirror/dashboard/: __init__.py  data.py  server.py
src/skymirror/dashboard/static/: app.js  index.html  styles.css
src/skymirror/graph/: __init__.py  edges.py  graph.py  state.py
src/skymirror/tools/: __init__.py  camera_fetcher.py  dashboard_status.py  governance.py  langsmith_utils.py  llm_factory.py  pinecone_retriever.py  rag_ingest.py  run_records.py  singapore_corpus.py
src/skymirror/tools/alert/: classification.py  constants.py  dispatcher.py  lta_lookup.py  rendering.py
src/skymirror/tools/daily_report/: analysis.py  loader.py  rendering.py
tests/: conftest.py  test_alert_manager.py  test_camera_fetcher.py  test_dashboard_data.py  test_dashboard_server_runtime.py  test_experts.py  test_experts_v1.py  test_graph_flow.py  test_main_camera_selection.py  test_pinecone_retriever.py  test_prompt_injection.py  test_rag_ingest.py  test_report_generator.py  test_runtime_governance.py  test_singapore_corpus.py  test_validator.py  test_vlm_agent.py
tests/fixtures/: alert_expert_results.json  lta_responses.json  malformed_day.jsonl  no_trigger_day.jsonl  normal_day.jsonl  single_type_day.jsonl
