[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# =============================================================================
# Project Metadata
# =============================================================================
[project]
name = "skymirror"
version = "0.1.0"
description = "Production multi-agent system for traffic camera analysis using LangGraph + Pinecone RAG"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # --- Orchestration --------------------------------------------------------
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    # --- Vector DB / RAG ------------------------------------------------------
    "pinecone>=7.0.0",
    "langchain-pinecone>=0.1.0",
    # --- Vision / Image Handling ----------------------------------------------
    "pillow>=10.4.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pypdf>=5.4.0",
    # --- Config & Utilities ---------------------------------------------------
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "structlog>=24.1.0",       # structured logging for production
    "tenacity>=8.3.0",         # retry logic
    "apscheduler>=3.10.0",     # daily report scheduling
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "langgraph-cli>=0.1.0",    # LangGraph dev server / visualization
]

[project.scripts]
skymirror = "skymirror.main:main"
skymirror-rag-ingest = "skymirror.tools.rag_ingest:main"
skymirror-rag-bootstrap-sg = "skymirror.tools.singapore_corpus:main"
skymirror-dashboard = "skymirror.dashboard.server:main"

# =============================================================================
# Tool Configuration
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/skymirror"]
